--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,86 @@ nav
     }
 
 }
+
+
+/* syed javith footer and about us */
+
+.footer-hr{
+    width: 40%; 
+     border-bottom: 2px solid #FFDF00;
+     opacity: 1;
+     border-top: 0;
+}
+.footer-li{
+    padding-left: 0;
+    list-style-type: none;
+}
+footer .column {
+    padding: 30px;
+}
+.footer-icons{
+    padding: 5px;
+}
+.footer-copyright{
+    text-align: center;
+    padding: 10px;
+}
+footer a{
+    text-decoration: none;
+    color: white;
+}
+
+footer{
+    background-color: #800080;
+    color : white;
+}
+
+
+.about-us-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    align-items: center;
+}
+
+.about-us-container .container{
+    padding: 30px;
+    width: 40%;
+}
+
+.about-us-nav{
+    background-color:white;
+    border-radius: 8px;
+    color: black;
+}
+.nav-tabs .nav-link{
+    color: black;
+    margin-right: 10px;
+}
+
+.nav-tabs .nav-link:focus , .nav-tabs .nav-link:hover{
+    background-color: transparent;
+    color: inherit;
+}
+.nav-tabs .nav-link.active {
+background-color: #800080;
+color: white;
+border-color: yellow;
+}
+@media only screen and (max-width: 850px) and (min-width : 300px ){
+    footer .row{
+        text-align: -webkit-center;
+    }  
+    .about-us-container .container{
+
+    width: 90%;
+    margin: auto 0px;
+} 
+}
+
+
+/* syed javith footer and about us  */
